@@ -12,18 +12,16 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class StreamLimitOperation {
 
-	private Random random = new Random();
-
 	@Test
 	public void limit() {
-		List<String> animals = Stream.of("zebra", "dog", "elephant", "camel", "cat", "fish", "dolphine").limit(4).collect(Collectors.toList());
+		List<String> animals = Stream.of("zebra", "dog", "elephant", "camel", "cat", "fish", "dolphine").limit(4).toList();
 		assertEquals(4, animals.size());
 		assertEquals(Arrays.asList("zebra", "dog", "elephant", "camel"), animals);
 	}
 
 	@Test
 	public void limitWithInfiniteStream() {
-		List<Integer> numbers = Stream.iterate(1, n -> n + n).limit(5).collect(Collectors.toList());
+		List<Integer> numbers = Stream.iterate(1, n -> n + n).limit(5).toList();
 
 		assertEquals(Arrays.asList(1,2,4,8,16), numbers);
 	}
